chore(): remove unused plugin

--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "tailwindcss-animate": "^1.0.5",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4",
-    "vite": "4.0.0",
-    "vite-plugin-static-copy": "^0.15.0"
+    "vite": "4.0.0"
   },
   "workspaces": [
     "packages/gql-client"
