fix(client): instant sync working example (cleanup needed)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.1",
     "@tanstack/react-table": "^8.9.1",
     "@types/reflect-metadata": "^0.1.0",
@@ -25,6 +26,8 @@
     "graphql": "^16.6.0",
     "graphql-request": "5.2.0",
     "lucide-react": "^0.216.0",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
