--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "yarn build:tailwind && MODE=local vite",
     "build": "tsc && vite build",
-    "build:tailwind": "yarn tailwindcss -i ./src/index.css -o ./dist/static/output.css",
+    "build:tailwind": "yarn tailwindcss -i ./src/index.css -o ./dist/static/output.css && cp ./dist/static/output.css ./public/static/output.css",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@tanstack/react-table": "^8.9.1",
     "@types/reflect-metadata": "^0.1.0",
