--- a/package.json
+++ b/package.json
@@ -12,34 +12,32 @@
   "dependencies": {
     "@anatine/esbuild-decorators": "^0.2.19",
     "@apollo/client": "^3.7.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.21.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@tanstack/react-table": "^8.9.1",
-    "@types/reflect-metadata": "^0.1.0",
-    "@vitejs/plugin-react-swc": "^3.2.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "deep-clone": "^4.0.0",
     "graphql": "^16.6.0",
     "graphql-request": "5.2.0",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.216.0",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reflect-metadata": "^0.1.13",
+    "safe-clone-deep": "^1.1.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
-    "uuid": "^9.0.0",
-    "vite-plugin-babel": "^1.1.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.0",
-    "@swc/core": "^1.3.46",
+    "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
