--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "noEmit": true,
-    "types": ["reflect-metadata", "node"],
+    "types": ["node"],
     "typeRoots": ["./src/typings"],
     "jsx": "react-jsx"
   },
